# VideoSurveillance_OpenCV

./: CMakeLists.txt  README.md  backgroundSubtraction.cpp  frameDifferencing.cpp
